@@ -15,10 +15,13 @@ my @out;
 my $user;
 my $ref;
 
-return (0) if $self->priv < 9;
+if ($self->priv < 9) {
+	Log('DXCommand', $self->call . " attempted to set privilege $priv for @args");
+	return (1, $self->msg('e5'));
+}
 
 if ($priv < 0 || $priv > 9) {
-  return (0, $self->msg('e5')); 
+  return (1, $self->msg('e5')); 
 }
 
 foreach $call (@args) {
@@ -35,11 +38,13 @@ foreach $call (@args) {
 		}
 		if ($ref || $user) {
 			push @out, $self->msg('priv', $call);
+			Log('DXCommand', "Privilege set to $priv on $call by " . $self->call);
 		} else {
 			push @out, $self->msg('e3', "Set Privilege", $call);
 		}
 	} else {
 		push @out, $self->msg('sorry');
+		Log('DXCommand', $self->call . " attempted to set privilege $priv for $call remotely");
 	}
 }
 return (1, @out);
